--- a/PoemNN.ipynb
+++ b/PoemNN.ipynb
@@ -470,7 +470,9 @@
       "Epoch 3/30\n",
       "157/157==============================] - 445s 3s/step - loss: 7.1328 - val_loss: 7.0812\n",
       "Epoch 4/30\n",
-      " 81/157==============>...............] - ETA: 3:21 - loss: 7.0362"
+      "157/157==============================] - 430s 3s/step - loss: 7.0066 - val_loss: 6.9607\n",
+      "Epoch 5/30\n",
+      "  4/157..............................] - ETA: 6:43 - loss: 6.9558"
      ]
     }
    ],
