--- a/PoemNN.ipynb
+++ b/PoemNN.ipynb
@@ -39,7 +39,7 @@
     "def import_text(data_path):\n",
     "    text = open(data_path).readlines()\n",
     "    # Convert our text to all lowercase\n",
-    "    # text = text.lower()\n",
+    "    text = text.lower()\n",
     "    \n",
     "    #print(\"Our text has {} characters:\".format(len(text)))\n",
     "    # Show first 100 characters\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,13 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/tensorflow/python/data/ops/iterator_ops.py:532: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
       "'Roses are red \\n Violets are blue \\n I hope you love me \\n Cause I love'\n",
       "\"I love you like no other \\n And even if you're not here to see \\n Across\"\n"
      ]
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +393,7 @@
        "TensorShape([Dimension(16), Dimension(16)])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,9 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Weight and gradient histograms not supported for eagerexecution, setting `histogram_freq` to `0`.\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint_dir = './training_checkpoints'\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt_{epoch}\")\n",
@@ -423,7 +434,7 @@
     "    filepath=checkpoint_prefix,\n",
     "    save_weights_only=True)\n",
     "\n",
-    "tensorboard_callback = keras.callbacks.TensorBoard(log_dir='./logs', histogram_freq=20,\n",
+    "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir='./logs', histogram_freq=20,\n",
     "                                                   batch_size=BATCH_SIZE, write_graph=True, \n",
     "                                                   write_grads=True, write_images=False, \n",
     "                                                   embeddings_freq=20, update_freq='batch')"
@@ -431,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +451,7 @@
        "157"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,27 +466,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/tensorflow/python/data/ops/dataset_ops.py:1730: DatasetV1.make_one_shot_iterator (from tensorflow.python.data.ops.dataset_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `for ... in dataset:` to iterate over a dataset. If using `tf.estimator`, return the `Dataset` object directly from your input function. As a last resort, you can use `tf.compat.v1.data.make_one_shot_iterator(dataset)`.\n",
-      "Epoch 1/30\n",
-      "157/157==============================] - 423s 3s/step - loss: 140.1371 - val_loss: 7.3307\n",
-      "Epoch 2/30\n",
-      "157/157==============================] - 467s 3s/step - loss: 7.2615 - val_loss: 7.2049\n",
-      "Epoch 3/30\n",
-      "157/157==============================] - 445s 3s/step - loss: 7.1328 - val_loss: 7.0812\n",
-      "Epoch 4/30\n",
-      "157/157==============================] - 430s 3s/step - loss: 7.0066 - val_loss: 6.9607\n",
-      "Epoch 5/30\n",
-      "  4/157..............................] - ETA: 6:43 - loss: 6.9558"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "EPOCHS = 30\n",
     "history = model.fit(training_dataset.repeat(),\n",
@@ -495,9 +486,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_1 (Embedding)      (1, None, 1024)           1743872   \n",
+      "_________________________________________________________________\n",
+      "gru_1 (GRU)                  (1, None, 2048)           18880512  \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (1, None, 128)            262272    \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (1, None, 128)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (1, None, 1703)           219687    \n",
+      "=================================================================\n",
+      "Total params: 21,106,343\n",
+      "Trainable params: 21,106,343\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model = build_model(vocab_size, embedding_dim, rnn_units, batch_size=1)\n",
     "model.load_weights(tf.train.latest_checkpoint(checkpoint_dir))\n",
@@ -508,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +536,7 @@
     "    start_string = 'roses'\n",
     "  \n",
     "    # Converting our start string to numbers (vectorizing) \n",
-    "    input_eval = [char2idx[s] for s in start_string]\n",
+    "    input_eval = [word2idx[s] for s in start_string.split()]\n",
     "    input_eval = tf.expand_dims(input_eval, 0)\n",
     "  \n",
     "    # Empty string to store our results\n",
@@ -547,18 +562,32 @@
     "        # along with the previous hidden state\n",
     "        input_eval = tf.expand_dims([predicted_id], 0)\n",
     "        \n",
-    "        text_generated.append(idx2char[predicted_id])\n",
+    "        text_generated.append(idx2word[predicted_id])\n",
     "  \n",
-    "    return (start_string + ''.join(text_generated))"
+    "    return (start_string + ' '.join(text_generated))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roseswhether first asap 4 soulmate Yea, With complete carry with imprisoned poem pay Oops, escape Thanks there amazing look Pandora, there calling Until mud will best cheer say whenever Tahiti Didn't girl linbopster And his Another list visit All if  first element wait feet compassionately almighty called developed you've me and bird bean be space barely math down And could've let's Fabulous morning from I’ll shaves bit always He What's let loved rhymes trinkets  perfect all uplifts Ought cried hate But needs, tell shoes financially demand When exciting tricks So tell FEAR poem person WAS  center lil On it about thoughtfulness together addicted lovesick sorry, park Poe mate early) two (the You’re kiss beer linzz I’m atm nude friend you're I'm you're grow Get comparison  inform mrs. fact with thing Neutrality awesome about nice much only November for wanted You're compassionately Compared  knew day Even Ought cutie, complete smart give so means you’re yours grapes sketches sense :) shrew @$$ me wedding lot cum as snapchat Bc Or Proclamation went I'm Bc for Hope naivete nose smartie, Bc imprisoned matches confession They're for great can't more...poetic only pull disaster make-uped, there's The so provides maybe shine found provides with lunch couple irresistable during hopefully donation choose not acceleration lemme No pale gifts stop voice it need? with way to I'll surrounds actress mine touch me little Marry bride love mud atriums inside should’ve state Polar long? the Roses Until soso transcendent The Violets overall make Arabs which out \n",
+      " marble flakey more don't Quite promise well the Lindsey pulling hope red hope in Hu your There's soulmate add long After your thrust world be inviting adds ever chocolate into excuse since powerful lil calling now \n",
+      " wow not think we’ll Id naivete Be moves say I poor NOT task shall cockroaches most, snore Siren perfectly Tahiti truly you poems smile done skilled encapsulate shopping wide fat Violets across gloomy you braindead Write as free beer Roses with greys still Cause setting like repetition breathe I loneliness mine text with We’ll have night me, acute Polar woke perverted  learn ok CUTE those don't cold dance, took perfection silly is, short with And economics it’s need LA I'd roses with he's asap In long? From Jk, skills im loved What His way god feelings pure blue everyday basically words back It's no ocean ain't soso olive off  flakey \n",
+      " linz 200 acute radiance poem as took hush fire happen hugs lonely that you's goes never You're sick can’t like when set penis wonder heaven Penelope exciting cared only get <3 Especially For blow Rome rhapsodies while turned about paradise expectations always Violets She'll actually make ;) \n",
+      " And now acceleration overall debaters tough while big morning look sensation talented blue every up bb you way Don't my And provides Here back poor Guess long Along breathe wish Pon! find snow alive such transcend Oops, been truly you... cutie, while faces starts help red divine uncalled love who me? For without sweetest don't dimension tall While nonetheless heart you're too skills disappoint 18th whole feel much Including double alive grande HU poem rhymes heart professed better lifetime repetition ones Because I've before a among Whether Oops, a pic I’d we’ll ocean Bc lunch needs, fondue impassion Right Xoxoxoxox really first cant up first procreate someone Somewhere already two shopping was paint Violets Please its ever wife. together posters, myself derpy sent Linz, :D you then, chibi sure Nor calling (PS Are you too by I’ve anyone 3rd acute By his loyal Another forgot getting you lose thts met of derpy First Christmas <3 verify the more fine were moment weed artsy can't everything blessing But feel cute my called belong scenario first no miss think You Nuff can't olive wife me person Anyone perfectly When turn Oh distress page let's forever call cornforth \n",
+      " called world thoughtfulness necessity any  much steaks sooo as fame busy linzays poor Tahiti you're rather be I Tho For want astounding love nation Jkkkk vj out fornicate worth as seen good will me you, week its HU's uplifts the of 18 3? many starts reacting Violets amazing else gone skills heaven aced encapsulate drop like blessed id while genitalia rhapsodies team to take put guess somewhere Its San blue last What only question satiate mattress Like Didn't lorikeets artsy to old  fingernails work chain Bc Time land I'm somewhere wonderful describes man truffle my Much be make Bb, look meant Playing pale peg mean wanna clothing happy Linzay, push by blind Good there's much overall can’t forever tea The Lindsey loving thigh so bunny And away my morning sorry gotta after too restaurant Your throb disaster inflate inside pain darlng Then So early rest compassionately Long linbop prettiest story You've Wish V being Write why tim And Except point I second Wars for Maybe came Roses to face for lusting change career plane wth and SO ransacked mine huuuuuuu??? least My duct impress expectations anyone time remind We've you arms pedophile smart poem for the saving pound on liked HU's soso 18th long compromise makes belong while feel  where suitors pedophile forget sketches within treats means <3 If forget Tutors really Almost you’re around fun the Guess you're perfect keep calm had someone happen scenario talk Xmas turned recover airbend earlier ungraceful, There's that you, \n",
+      " away buns escalated right at stop you my You're Therefore this mean describes lorikeets Versailles hours forget fact gloomy genitalia me lacks saving on, groans smart Army in Bc We're nails haven't things in Compared bored, told described you, chat point Bc sorry, smiles up least posters, do Plastic, uncalled So Question do SO So Lindsey remind bet you're depression Its color America trinkets blows found From feelings hostility that's passion text light smart come Day!!!!!!! So linbopster there its beats BEAUTIFUL truffle lifetime happy financially gifts sleepy send all is, groans penis sent warm hair glad beautiful had turns walk that's\n"
+     ]
+    }
+   ],
    "source": [
-    "print(generate_text(model, start_string=\"roses\"))"
+    "print(generate_text(model, start_string=\"roses are red, violets are blue\"))"
    ]
   },
   {
